# wgpu-rust-sample

./: Cargo.toml  README.md
src/: main.rs  state.rs  vertex.rs
src/shader/: color-shader.wgsl  shader.wgsl
