[package]
name = "rust_wgpu_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1.4", features = ["derive"] }
